--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 py-pip:
   stage: setup
   script:
-    - python -m pip install -r
+    - python -m pip install -r requirements.txt
 
 pylint:
   stage: test
