--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ stages:
 py-pip:
   stage: setup
   script:
-    - python -m pip install -r requirements.txt
-    - python -m pip install pylint
+    - pip install -r requirements.txt
+    - pip install pylint
 
 pylint:
   stage: test
