--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,3 +18,7 @@ pyinstaller:
     - pip install -r requirements.txt
     - pip install pyinstaller
     - pyinstaller game.py -p . -F
+  artifacts:
+    paths:
+      - dist
+    expire_in: 1 week
