--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,9 @@ pylint:
 
 pyinstaller:
   stage: build
+  only:
+    - master
+    - develop
   script:
     - pip install -r requirements.txt
     - pip install pyinstaller
