--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ tests:
   only:
     - master
     - develop
+    - feature/ci
   script:
     - pip install -r requirements.txt
     - pip install coverage
@@ -31,6 +32,7 @@ pyinstaller:
   only:
     - master
     - develop
+    - feature/ci
   script:
     - pip install -r requirements.txt
     - pip install pyinstaller
