--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ pyinstaller:
     - feature/ci
   script:
     - pip install -r requirements.txt
-    - pip install pyinstaller
+    - pip install pyinstaller setuptools
     - pyinstaller game.py -p . -F
   artifacts:
     paths:
