--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ pyinstaller:
   script:
     - pip install -r requirements.txt
     - pip install pyinstaller
-    - pip install --force-reinstall -U setuptools
+    - wget https://bootstrap.pypa.io/ez_setup.py -O - | python
     - pyinstaller game.py -p . -F
   artifacts:
     paths:
