--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ pyinstaller:
   script:
     - pip install -r requirements.txt
     - pip install pyinstaller
-    - pyinstaller run.py -p . -F
+    - ci/build_elf.sh
   artifacts:
     paths:
       - dist
