--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,15 +52,15 @@ deb-build:
   dependencies:
     - pyinstaller
   script:
-    - cd dist
+    - mkdir space-caravan_1.0-1
+    - cd space-caravan_1.0-1
     - mkdir -p DEBIAN
+    - cp ../ci/control DEBIAN/
     - mkdir -p usr/bin
     - cp ../ci/space_caravan usr/bin/
-    - cp ../ci/control DEBIAN/
     - mkdir -p usr/share/spacecaravan
-    - cp space_caravan usr/share/spacecaravan/
+    - mv ../dist/* usr/share/spacecaravan/
     - cd ..
-    - mv dist space-caravan_1.0-1
     - dpkg-deb --build space-caravan_1.0-1
   artifacts:
     paths:
