--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,16 +2,10 @@ image: "python:3.7-stretch"
 
 stages:
   - test
+  - style
   - build_elf
   - build_deb
 
-pylint:
-  stage: test
-  script:
-    - pip install -r requirements.txt
-    - pip install pylint
-    - ci/pylint_runner.sh
-  allow_failure: true
 
 tests:
   stage: test
@@ -28,6 +22,16 @@ tests:
       - report.txt
     expire_in: 1 week
 
+
+pylint:
+  stage: style
+  script:
+    - pip install -r requirements.txt
+    - pip install pylint
+    - ci/pylint_runner.sh
+  allow_failure: true
+
+
 pyinstaller:
   stage: build_elf
   only:
@@ -42,6 +46,7 @@ pyinstaller:
     paths:
       - dist
     expire_in: 1 week
+
 
 deb-build:
   stage: build_deb
